--- a/configuration/vertx.env
+++ b/configuration/vertx.env
@@ -5,7 +5,7 @@
 #     vertx_app:    Uses the vertx run command.    E.g. vertx_app=server.js
 #     vertx_module: Uses the vertx runmod command. E.g. vertx_module=com.acme~my-mod~2.1
 #     vertx_zip:    Uses vertx runzip command.     E.g. vertx_zip=my-mod~2.0.1.zip
-#export vertx_module=
+#export vertx_module=com.jetdrone~yoke~2.0.13
 #export vertx_zip=
 export vertx_app=server.js
 
